--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,92 +1,58 @@
-body{
-  font-family: sans-serif;
+body {
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN";
 }
 
-
-
-.header{
-  background-color: #ffc0cb;
-  height:90px;
-  color:#f08080
-}
-.header-logo{
-  float:left;
-  font-size:36px;
-  padding:20px 40px;
+a {
+  text-decoration: none;
 }
 
-.header-list li{
-  list-style: none;
-  float: left;
-  padding:33px 20px;
-}
-.main{
-  padding:100px 80px;
+.container{
+  width:1170px;
+  padding:0 15px;
+  margin:auto;
 }
 
-.copy-container h1{
-  font-size: 140px;
-  color:#ff69b4;
+.top-wrapper{
+  padding:180px 0 100px 0;
+  background-image: url(workplace-2303851_1920.jpg);
+  background-size: cover;
 }
 
-.copy-container h2{
-  font-size:60px;
-  color:#191970;
+.top-wrapper h1{
+  opacity:0.7;
+  font-size:45px;
+  letter-spacing: 2px;
 }
 
-.copy-container span{
-  color:#ff6347;
+.top-wrapper p{
+  opacity:0.7;
 }
 
-.section-title{
-  border-bottom:2px solid #bc8f8f;
-  font-size:28px;
-  margin-bottom:50px;
-  padding-top:10px;
+.btn{
+  padding:8px 24px;
+  color:white;
+  display:inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
 }
 
-.item{
-  font-size: 20px;
-  color:#cd5c5c;
+.btn:hover{
+  opacity:1;
 }
 
-.contact-form{
-  padding-top:100px;
+.twitter{
+  background-color: #55acee;
 }
 
-input,textarea{
-  width:400px;
-  margin-top:10px;
-  margin-bottom:30px;
-  padding:20px;
-  font-size:18px;
-  border:1px solid #da70d6;
+.btn-wrapper{
+  margin:20px 0;
 }
 
-
-.footer{
-  background-color:#d3d3d3;
-  height:140px;
-  color:#808080;
+.twitter{
+  margin-right: 10px;
 }
 
-.contact-submit{
-  background-color: #ffe4e1;
-  color:#da70d6;
-}
-
-.footer-logo{
-  font-size: 36px;
-  float:left;
-  padding-left: 20px;
-}
-
-.footer-list {
-  float: right;
-}
-
-.footer-list li{
-  list-style: none;
-  padding-bottom:20px;
-  padding-right:20px;
+.fa{
+  margin-right: 10px;
 }
