--- a/responsive.css
+++ b/responsive.css
@@ -14,6 +14,7 @@ box-sizing:border-box;
   font-size:20px;
 }
 
+
 }
 
 @media(max-width:670px){
@@ -36,8 +37,8 @@ footer{
 .header-right{
   display:none;
 }
-.menu-icon{
+.container .menu-icon{
   display:block;
-  
 }
+
 }
